--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their o
 <p><strong>Can you clean my conservatory?</strong><br>
 We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard.</p>
 
-<p><strong>How often should i have my windows cleaned?</strong><br>
+<p><strong>How often should I have my windows cleaned?</strong><br>
 Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained.</p>
 
 <p><strong>What surfaces can you pressure wash?</strong><br>
@@ -327,7 +327,7 @@ document.getElementById("lightbox").style.display="none";
 },
 {
 "@type": "Question",
-"name": "How often should i have my windows cleaned?",
+"name": "How often should I have my windows cleaned?",
 "acceptedAnswer": {
 "@type": "Answer",
 "text": "Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained."
