--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <img src="/images/internal-repairs.webp"
 alt="Internal minor home repairs in Doncaster, fixing doors, walls, and small household issues professionally"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
@@ -140,7 +140,7 @@ alt="Guttering services in Doncaster including cleaning, clearing, repairs and f
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)">
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}"
 </section>
 
 <!-- Section 3 -->
@@ -150,7 +150,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <img src="/images/house-before-after.webp"
 alt="Exterior painting in Doncaster including houses, metal garden rails, gates and wooden fencing"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
@@ -162,7 +162,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <img src="/images/upvc-restoration.webp"
 alt="uPVC restoration in Doncaster with detailed cleaning of frames, doors, fascias and guttering"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
@@ -174,7 +174,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <img src="/images/conservatory-before-after.webp"
 alt="Full conservatory valet in Doncaster including inside and outside cleaning of glass, frames and roof"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
@@ -186,7 +186,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <img src="/images/window-cleaning-service.webp"
 alt="Regular window cleaning in Doncaster for homes and business with clear, streak free results"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
@@ -198,7 +198,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <img src="/images/pressure-wash.webp"
 alt="Pressure washing in Doncaster for driveways, paths, decking and roofs"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
