--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <img src="/images/cleaned-gutters-before-after.webp"
 alt="Guttering services in Doncaster including cleaning, clearing, repairs and full gutter replacement for homes"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)">
+onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
 
 <!-- Section 3 -->
