--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ document.getElementById("lightbox").style.display="none";
 "name": "Can you repair damaged gutters?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters' efficiency."
+"text": "Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency."
 }
 },
 {
@@ -410,7 +410,7 @@ document.getElementById("lightbox").style.display="none";
 "openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
 "sameAs": [
 "https://www.facebook.com/profile.php?id=61584395621256",
-],
+]
 "areaServed": [
 {"@type": "Place", "name": "Doncaster"},
 {"@type": "Place", "name": "Bentley"},
